--- a/recipes/Jumbalaya.html
+++ b/recipes/Jumbalaya.html
@@ -5,6 +5,10 @@
     <title>Jumbalaya Recipe</title>
 </head>
 <body>
-    <h1>Jumbalaya</h1>
+    <a href="../index.html">Home</a>
+    
+    <h1>Jambalaya</h1>
+    <img src="./download.jpeg">
+    <p>Jambalaya is a one-pot rice dish originating in Louisiana, combining rice, meat or seafood, and vegetables. It's often associated with Cajun and Creole cuisine, incorporating flavors from French, Spanish, and African culinary traditions. The name "jambalaya" is believed to come from the French word "jambalaia," meaning "mishmash". </p>
 </body>
 </html>
