--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+             <li><a href="recipes/Jumbalaya.html">Jambalaya</a></li>
+             <li><a href="recipes/tuna-salad-sandwich.html">Tuna Salad Sandwich</a></li>
+             <li><a href="recipes/french-onion-soup.html">French Onion Soup</a></li>
+
+        </ul>
     </body>
 </html>
