--- a/recipes/Jumbalaya.html
+++ b/recipes/Jumbalaya.html
@@ -9,6 +9,35 @@
     
     <h1>Jambalaya</h1>
     <img src="./download.jpeg">
+   
+    <h3>Description</h3>
     <p>Jambalaya is a one-pot rice dish originating in Louisiana, combining rice, meat or seafood, and vegetables. It's often associated with Cajun and Creole cuisine, incorporating flavors from French, Spanish, and African culinary traditions. The name "jambalaya" is believed to come from the French word "jambalaia," meaning "mishmash". </p>
+
+    <h4>Ingredients</h4>
+    <ul>
+        <li>2 scallions</li>
+        <li>1 samll yellow onion</li>
+        <li>3 medium stalks celery</li>
+        <li>1 medium green bell pepper</li>
+        <li>3 cloves garlic</li>
+        <li>1 package andouille sausage</li>
+        <li>12 ounces boneless chicken</li>     
+        <li>salt</li>
+        <li>butter</li>
+        <li>rice</li>
+        <li>2.5 cups chicken broth</li>
+    </ul>
+
+    <h4>Steps</h4>
+    <ol>
+        <li>Brown sausage then remove</li>
+        <li>Cook chicken then remove</li>
+        <li>Saute vegetables until tender, then add garlic and salt</li>
+        <li>Add chicken broth to vegetables</li>
+        <li>Add cooked meats</li>
+        <li>Let simmer for some time</li>
+        <li>Enjoy!</li>
+    </ol>
+
 </body>
 </html>
